--- a/_includes/projects.liquid
+++ b/_includes/projects.liquid
@@ -1,6 +1,6 @@
 <div class="grid-sizer"></div>
 <div class="grid-item">
-  <a href="{% if project.redirect %}{{ project.redirect }}{% else %}{{ project.url | relative_url }}{% endif %}">
+  <a href="{{ site.baseurl | append: project.url | relative_url }}">
     <div class="card hoverable">
       {% if project.img %}
         {%
