--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{% unless site.data.resume %}
+{% unless site.data[page.resume_data] %}
   <div class="post">
     <header class="post-header">
       <h1 class="post-title">
@@ -69,7 +69,7 @@ layout: default
 
     <article>
       <div class="cv">
-        {% for data in site.data.resume %}
+        {% for data in site.data[page.resume_data] %}
           {% if site.jsonresume and site.jsonresume.size > 0 %}
             {% unless site.jsonresume contains data[0] %}
               {% continue %}
